--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+  <h2>Feedback Form</h2>
+<div>	
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" minlength="3" maxlength="50" required>
+<br></div>	
+		
+<div>			
+  <label for="portfolio">Portfolio:</label>
+  <input type="url" id="portfolio" name="portfolio" required>
+<br></div>	
+
+		<div>	
+  <label for="favColor">Favorite Color:</label>
+  <input type="color" id="favColor">
+<br></div>	
+
+		<div>		
+  <label for="likeness">How much do you like your favorite color?</label>
+  <input type="range" id="likeness" name="likeness" min="1" max="100">
+<br></div>	<br>
+  <input type="submit" value="Submit">
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
